# sdks

python/core/: pyproject.toml
python/core/foldset/: __init__.py  api.py  config.py  handler.py  health.py  mcp.py  paywall.py  routes.py  server.py  store.py  telemetry.py  types.py  web.py
python/django/: pyproject.toml
python/django/foldset_django/: __init__.py  adapter.py  middleware.py
python/fastapi/: pyproject.toml
python/fastapi/foldset_fastapi/: __init__.py  adapter.py  middleware.py
python/flask/: pyproject.toml
python/flask/foldset_flask/: __init__.py  adapter.py  middleware.py
typescript/core/: package.json  tsconfig.json
typescript/core/src/: api.ts  config.ts  handler.ts  health.ts  index.ts  mcp.ts  paywall.ts  routes.ts  server.ts  store.ts  telemetry.ts  types.ts  web.ts
typescript/express/: package.json  tsconfig.json
typescript/express/src/: adapter.ts  middleware.ts
typescript/hono/: package.json
typescript/hono/src/: adapter.ts  index.ts  middleware.ts
typescript/nextjs/: notes.txt  package.json  tsconfig.json
typescript/nextjs/src/: adapter.ts  index.ts  proxy.ts
