[project]
name = "foldset"
version = "0.0.1"
description = "Core types and utilities for Foldset x402 payment protection"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "x402[mechanisms]>=2.0.0",
    "upstash-redis>=1.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foldset"]
