[project]
name = "foldset-django"
version = "0.0.1"
description = "Django middleware for Foldset x402 payment gating"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "foldset>=0.0.1",
    "django>=4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foldset_django"]
