[project]
name = "foldset-fastapi"
version = "0.0.1"
description = "FastAPI middleware for Foldset x402 payment gating"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "foldset>=0.0.1",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foldset_fastapi"]
