[project]
name = "foldset-flask"
version = "0.0.1"
description = "Flask middleware for Foldset x402 payment gating"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "foldset>=0.0.1",
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foldset_flask"]
